Fixes the bug:: on mobile devices in  the "info profile" modal window the version number is not visible because it is on a white background

--- a/src/app/pages/profile-info/profile-info.page.scss
+++ b/src/app/pages/profile-info/profile-info.page.scss
@@ -114,6 +114,15 @@
             margin-top: 15px;
             margin-bottom: 5px;
         }
+
+        // ion-toolbar {
+        //     --padding-bottom: 0px;
+        //     --background: #1e2129 !important;	
+        //     div.toolbar-container {
+        //         padding: 0px !important;
+        //         background: #1e2129 !important;
+        //     }
+        // }
     }
 
     .avatar-container {
@@ -250,6 +259,7 @@ ion-footer{
     .content-chat-version {
         color: white;
         padding: 20px;
+        background-color: #1e2129;
     }
     .chat-title{
         font-size: 14px;
@@ -262,3 +272,4 @@ ion-footer{
         margin: 0;
     }
 }
+
